Thu Jun  6 11:11:36 BST 2013  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Set MANDIR_LAYOUT using AC_SUBST as well as
	  AC_DEFINE/AC_DEFINE_UNQUOTED.
	* src/tests/Makefile.am (TESTS_ENVIRONMENT): Export MANDIR_LAYOUT.
	* src/tests/testlib.sh (skip): New function.
	* src/tests/man-3: Skip unless the GNU layout is in use.

Thu Jun  6 10:57:17 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/tests/man-1, src/tests/man-2, src/tests/man-3,
	  src/tests/man-4, src/tests/mandb-1, src/tests/mandb-2,
	  src/tests/mandb-3, src/tests/mandb-4, src/tests/mandb-5,
	  src/tests/mandb-6, src/tests/whatis-1, src/tests/zsoelim-1: Export
	  MANPATH separately rather than trying to set it just for the 'run'
	  function.  The latter approach does not seem to work reliably in
	  FreeBSD's /bin/sh.
	* src/tests/testlib.sh: Stop exporting MANPATH here.

Thu Jun  6 09:37:46 BST 2013  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Use BSD layout on *-*bsd* (e.g. FreeBSD), not just
	  *-bsd*.
	  Test for Berkeley DB in libc, as is the case on FreeBSD.

Thu Jun  6 09:36:09 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/check_mandirs.c (purge_missing) [NDBM]: Check for the
	  existence of DATABASE.dir rather than DATABASE.

Thu Jun  6 09:32:24 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/catman.c (add_arg): MYDBM_DSIZE may return size_t; cast (for
	  the cases where it returns int instead) and format using %zu
	  rather than %d.

Thu Jun  6 09:01:46 BST 2013  Trần Ngọc Quân  <vnwildman@gmail.com>

	* po/vi.po: Update from Translation Project.

Thu Jun  6 02:51:15 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/tests/testlib.sh: Export LC_ALL and MANPATH, for the benefit
	  of shells that do not automatically re-export variables they
	  receive in their environment.

Thu Jun  6 02:50:25 BST 2013  Colin Watson  <cjwatson@debian.org>

	* src/descriptions_store.c (store_description): Format size_t using
	  %zu, not %d.
